# claude-sdk

./: .gitignore  CHANGELOG.md  IMPLEMENTATION-PLAN.md  MISSING-API-FEATURES.md  README.md  claude-sdk.cabal  fourmolu.yaml
.claude/agents/: aegis.md  atlas.md  nyx.md  praxis.md
.github/workflows/: ci.yml
app/: SinglePrompt.hs  StreamingPrompt.hs  ToolUseExample.hs
src/Anthropic/: Claude.hs
src/Anthropic/Claude/: Batch.hs  Client.hs  Messages.hs  Streaming.hs  Tools.hs  Types.hs
src/Anthropic/Claude/Internal/: HTTP.hs  JSON.hs  Retry.hs  SSE.hs  Streaming.hs
src/Anthropic/Claude/Types/: Batch.hs  Client.hs  Common.hs  ContentBlock.hs  Core.hs  Error.hs  Logging.hs  Logging.hs-boot  Observability.hs  Observability.hs-boot  RateLimitInfo.hs  Request.hs  Response.hs  Schema.hs  Stream.hs
test/Anthropic/Claude/: BatchSpec.hs  ClientSpec.hs  MessagesSpec.hs  StreamingSpec.hs  TestHelpers.hs  ToolsSpec.hs
test/Anthropic/Claude/Internal/: HTTPSpec.hs  RetrySpec.hs  SSESpec.hs  StreamingSpec.hs
test/Anthropic/Claude/Types/: BatchSpec.hs  ClientSpec.hs  CommonSpec.hs  ContentBlockSpec.hs  CoreSpec.hs  ErrorSpec.hs  LoggingSpec.hs  ObservabilitySpec.hs  RequestSpec.hs  ResponseSpec.hs  SchemaSpec.hs  StreamSpec.hs
