cabal-version:      3.0
name:               claude-sdk
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Geoffrey Noel
maintainer:         gnoel@anthropic.com
category:           Network
synopsis:           Production-grade Haskell SDK for Claude API
description:
  A comprehensive, type-safe Haskell SDK for building Claude client applications.
  Follows architectural best practices with streaming support, retry policies,
  and full API coverage.
stability:          experimental
homepage:           https://github.com/anthropics/claude-sdk-haskell
bug-reports:        https://github.com/anthropics/claude-sdk-haskell/issues
tested-with:        GHC == 9.6.7
extra-doc-files:    README.md
                    CHANGELOG.md

common warnings
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wredundant-constraints
  default-language: Haskell2010

library
  import:           warnings
  exposed-modules:  Anthropic.Claude
                    Anthropic.Claude.Types
                    Anthropic.Claude.Types.Core
                    Anthropic.Claude.Types.Common
                    Anthropic.Claude.Types.Error
                    Anthropic.Claude.Types.Client
                    Anthropic.Claude.Types.Request
                    Anthropic.Claude.Types.Response
                    Anthropic.Claude.Types.Stream
                    Anthropic.Claude.Types.Batch
                    Anthropic.Claude.Messages
                    Anthropic.Claude.Client
                    Anthropic.Claude.Streaming
                    Anthropic.Claude.Batch
                    Anthropic.Claude.Tools
                    Anthropic.Claude.Internal.JSON
                    Anthropic.Claude.Internal.HTTP
                    Anthropic.Claude.Internal.Retry
                    Anthropic.Claude.Internal.SSE
                    Anthropic.Claude.Internal.Streaming
  other-modules:
  hs-source-dirs:   src
  build-depends:    base >=4.16 && <5,
                    aeson >=2.1,
                    text >=1.2,
                    bytestring >=0.11,
                    time >=1.11,
                    containers >=0.6,
                    exceptions >=0.10,
                    http-types >=0.12,
                    http-client >=0.7,
                    http-client-tls >=0.3,
                    unliftio-core >=0.2,
                    unliftio >=0.2,
                    streaming >=0.2
  default-language: Haskell2010

executable single-prompt
  import:           warnings
  main-is:          SinglePrompt.hs
  hs-source-dirs:   app
  build-depends:    base >=4.16 && <5,
                    claude-sdk,
                    text >=1.2
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable streaming-prompt
  import:           warnings
  main-is:          StreamingPrompt.hs
  hs-source-dirs:   app
  build-depends:    base >=4.16 && <5,
                    claude-sdk,
                    text >=1.2
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable tool-use-example
  import:           warnings
  main-is:          ToolUseExample.hs
  hs-source-dirs:   app
  build-depends:    base >=4.16 && <5,
                    claude-sdk,
                    text >=1.2,
                    aeson >=2.1
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite claude-sdk-test
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    Anthropic.Claude.Types.CoreSpec
                    Anthropic.Claude.Types.CommonSpec
                    Anthropic.Claude.Types.ErrorSpec
                    Anthropic.Claude.Types.ClientSpec
                    Anthropic.Claude.Types.RequestSpec
                    Anthropic.Claude.Types.ResponseSpec
                    Anthropic.Claude.Types.StreamSpec
                    Anthropic.Claude.Types.BatchSpec
                    Anthropic.Claude.Internal.HTTPSpec
                    Anthropic.Claude.Internal.RetrySpec
                    Anthropic.Claude.Internal.SSESpec
                    Anthropic.Claude.Internal.StreamingSpec
                    Anthropic.Claude.MessagesSpec
                    Anthropic.Claude.ClientSpec
                    Anthropic.Claude.StreamingSpec
                    Anthropic.Claude.BatchSpec
                    Anthropic.Claude.ToolsSpec
  hs-source-dirs:   test
  build-tool-depends: hspec-discover:hspec-discover >=2.10
  build-depends:    base >=4.16 && <5,
                    claude-sdk,
                    hspec >=2.10,
                    QuickCheck >=2.14,
                    aeson,
                    text,
                    bytestring,
                    http-types,
                    http-client,
                    unliftio,
                    streaming
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
